fix: align main stylesheet with al_folio_core sass entrypoint

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,11 +3,8 @@
 
 @charset "utf-8";
 
-@use "sass:math";
-@use "sass:string";
-
 @use "variables" with (
-  $max-content-width: {{ site.max_width | default:  "930px" }}
+  $max-content-width: {{ site.max_width | default: "930px" }}
 );
 
 @use "themes";
